# kalshi-rust

./: .gitignore
kalshi/: Cargo.toml
kalshi/src/: communications.rs  exchange.rs  historical.rs  http.rs  market.rs  multivariate.rs  portfolio.rs  series.rs
kalshi/src/websockets/: client.rs  responses.rs
kalshi/test_resources/: events_response.json
